# SpikeSortingTools

./: .gitignore  README.md  Viewer.ipynb  environment.yml  example.py  exampleOpenEphys.py  exampleSpikeGLX.py  notes  pyproject.toml
SpikeSortingTools/: __init__.py  motion.py  preprocess.py  sorting.py
SpikeSortingTools/qc/: __init__.py  qc.py  refractory.py  truncation.py
pipeline/: __init__.py  curation.py  motion.py  preprocess.py  qc.py  refractory.py  sorting.py  truncation.py
pipeline_results_aftercatgt/conditioning/: channel_metrics.npy
